compiler-core/src/type_/tests/snapshots/gleam_core__type___tests__errors__record_update_wrong_variant.snap
---
source: compiler-core/src/type_/tests/errors.rs
assertion_line: 2493
expression: "\npub type MyRecord {\n  A(common: Int, other: String)\n  B(common: Int, different: Float)\n}\n\npub fn b_to_a(value: MyRecord) {\n  case value {\n    A(..) -> value\n    B(..) as b -> A(..b, other: \"Hi\")\n  }\n}\n"
---
error: Incorrect record update
   ┌─ /src/one/two.gleam:10:19
   │
10 │     B(..) as b -> A(..b, other: "Hi")
   │                   ^ This is not the right constructor

This record is a different variant to the one used for the update, so it
would never be correct.
